--- a/examples/rectangles/submit.properties
+++ b/examples/rectangles/submit.properties
@@ -1,4 +1,4 @@
 submitURL = https://cs.ycp.edu/marmoset/bluej/SubmitProjectViaBlueJSubmitter
 courseName = CS 101
-semester = Summer 2015
-projectNumber = example
+semester = Fall 2019
+projectNumber = rectangles
